# sigil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mcp_server.py  pyproject.toml  smithery.yaml
.github/: FUNDING.yml  SPONSORS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.well-known/mcp/: server-card.json
sigil/: __init__.py  client.py
tests/: test_client.py  test_mcp_server.py
